# mwaa-cli

./: pyproject.toml
mwaa_cli/: __init__.py  config.py
mwaa_cli/example/: sample_dag.py
rest_api/: Dockerfile  docker-compose.yaml  rest-api-cli
rest_api/app/: main.py  requirements.txt
tests/: test_mwaa_rest.py
